# egld-staking

./: Cargo.toml  README.md
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: egld_staking.scen.json
src/: egld_staking.rs
tests/: egld_staking_scenario_rs_test.rs
