[package]
name = "egld-staking"
version = "0.0.0"
authors = [ "Viachaslau Rouski <vrovsky@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/egld_staking.rs"

[dependencies.multiversx-sc]
version = "0.45.2"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.45.2"

[workspace]
members = [
    ".",
    "meta",
]
